--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "8059783"]
 	path = 8059783
 	url = https://gist.github.com/8059783.git
+[submodule "5975713"]
+	path = 5975713
+	url = https://gist.github.com/5975713.git
