--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "5975713"]
 	path = 5975713
 	url = https://gist.github.com/5975713.git
+[submodule "5530356"]
+	path = 5530356
+	url = https://gist.github.com/5530356.git
