--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "5530356"]
 	path = 5530356
 	url = https://gist.github.com/5530356.git
+[submodule "3261055"]
+	path = 3261055
+	url = https://gist.github.com/3261055.git
