--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "3261055"]
 	path = 3261055
 	url = https://gist.github.com/3261055.git
+[submodule "6011515"]
+	path = 6011515
+	url = https://gist.github.com/6011515.git
