--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "6011515"]
 	path = 6011515
 	url = https://gist.github.com/6011515.git
+[submodule "6004478"]
+	path = 6004478
+	url = https://gist.github.com/6004478.git
