--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "6004478"]
 	path = 6004478
 	url = https://gist.github.com/6004478.git
+[submodule "5419653"]
+	path = 5419653
+	url = https://gist.github.com/5419653.git
