--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "5419653"]
 	path = 5419653
 	url = https://gist.github.com/5419653.git
+[submodule "7763827"]
+	path = 7763827
+	url = https://gist.github.com/7763827.git
