--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "7763827"]
 	path = 7763827
 	url = https://gist.github.com/7763827.git
+[submodule "3886864"]
+	path = 3886864
+	url = https://gist.github.com/3886864.git
