--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "3886864"]
 	path = 3886864
 	url = https://gist.github.com/3886864.git
+[submodule "3886867"]
+	path = 3886867
+	url = https://gist.github.com/3886867.git
