--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "3886867"]
 	path = 3886867
 	url = https://gist.github.com/3886867.git
+[submodule "8431016"]
+	path = 8431016
+	url = https://gist.github.com/8431016.git
