--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "8431016"]
 	path = 8431016
 	url = https://gist.github.com/8431016.git
+[submodule "8431010"]
+	path = 8431010
+	url = https://gist.github.com/8431010.git
