--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 [submodule "8431010"]
 	path = 8431010
 	url = https://gist.github.com/8431010.git
+[submodule "8430911"]
+	path = 8430911
+	url = https://gist.github.com/8430911.git
