--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "8430911"]
 	path = 8430911
 	url = https://gist.github.com/8430911.git
+[submodule "8430847"]
+	path = 8430847
+	url = https://gist.github.com/8430847.git
