--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 [submodule "8430847"]
 	path = 8430847
 	url = https://gist.github.com/8430847.git
+[submodule "8430823"]
+	path = 8430823
+	url = https://gist.github.com/8430823.git
