--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "8430823"]
 	path = 8430823
 	url = https://gist.github.com/8430823.git
+[submodule "2714804"]
+	path = 2714804
+	url = https://gist.github.com/2714804.git
