--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,6 @@
 [submodule "2714804"]
 	path = 2714804
 	url = https://gist.github.com/2714804.git
+[submodule "7522125"]
+	path = 7522125
+	url = https://gist.github.com/7522125.git
