--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,6 @@
 [submodule "7522125"]
 	path = 7522125
 	url = https://gist.github.com/7522125.git
+[submodule "8432474"]
+	path = 8432474
+	url = https://gist.github.com/8432474.git
