--- a/.gitmodules
+++ b/.gitmodules
@@ -52,3 +52,6 @@
 [submodule "8432474"]
 	path = 8432474
 	url = https://gist.github.com/8432474.git
+[submodule "8434259"]
+	path = 8434259
+	url = https://gist.github.com/8434259.git
