--- a/.gitmodules
+++ b/.gitmodules
@@ -55,3 +55,6 @@
 [submodule "8434259"]
 	path = 8434259
 	url = https://gist.github.com/8434259.git
+[submodule "5425415"]
+	path = 5425415
+	url = https://gist.github.com/5425415.git
