--- a/.gitmodules
+++ b/.gitmodules
@@ -58,3 +58,6 @@
 [submodule "5425415"]
 	path = 5425415
 	url = https://gist.github.com/5425415.git
+[submodule "8703397"]
+	path = 8703397
+	url = https://gist.github.com/8703397.git
