--- a/.gitmodules
+++ b/.gitmodules
@@ -61,3 +61,6 @@
 [submodule "8703397"]
 	path = 8703397
 	url = https://gist.github.com/8703397.git
+[submodule "31436d82befafab96d15"]
+	path = 31436d82befafab96d15
+	url = https://gist.github.com/31436d82befafab96d15.git
