--- a/.gitmodules
+++ b/.gitmodules
@@ -64,3 +64,6 @@
 [submodule "31436d82befafab96d15"]
 	path = 31436d82befafab96d15
 	url = https://gist.github.com/31436d82befafab96d15.git
+[submodule "a522e5a169aad662fa80"]
+	path = a522e5a169aad662fa80
+	url = https://gist.github.com/a522e5a169aad662fa80.git
