--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "71e3cb5069edaa0bceae"]
 	path = 71e3cb5069edaa0bceae
 	url = https://gist.github.com/71e3cb5069edaa0bceae.git
+[submodule "f861b81d087c68b99412"]
+	path = f861b81d087c68b99412
+	url = https://gist.github.com/f861b81d087c68b99412.git
